[package]
name = "sfml"
description = "Rust binding for sfml"
version = "0.14.0"
authors = ["Jeremy Letang <letang.jeremy@gmail.com>"]
documentation = "https://docs.rs/sfml"
repository = "https://github.com/jeremyletang/rust-sfml"
license = "zlib-acknowledgement"
keywords = ["sfml", "multimedia", "game"]
readme = "README.md"
edition = "2018"
build = "build.rs"

[features]
default = ["graphics", "audio"]
window = ["csfml-window-sys", "bitflags"]
graphics = ["window", "csfml-graphics-sys"]
audio = ["csfml-audio-sys"]
network = ["csfml-network-sys"]

[dependencies.bitflags]
version = "1.0"
optional = true

[dependencies.csfml-system-sys]
path = "ffi/csfml-system-sys"
version = "0.4.0"

[dependencies.csfml-window-sys]
path = "ffi/csfml-window-sys"
version = "0.4.0"
optional = true

[dependencies.csfml-graphics-sys]
path = "ffi/csfml-graphics-sys"
version = "0.4.0"
optional = true

[dependencies.csfml-audio-sys]
path = "ffi/csfml-audio-sys"
version = "0.4.0"
optional = true

[dependencies.csfml-network-sys]
path = "ffi/csfml-network-sys"
version = "0.2.0"
optional = true

[dev-dependencies]
rand = "0.3"

[build-dependencies]
build_tools = { git = "https://gitlab.com/FalconProgrammer/rust-build-tools.git" , rev = "fbe01d278b55529a895b1d3757ac45ae17dd6d7d" }

[lib]
name = "sfml"
crate-type = ["dylib", "rlib"]

[[example]]
name = "borrowed-resources"
required-features = ["graphics"]

[[example]]
name = "custom-drawable"
required-features = ["graphics"]

[[example]]
name = "custom-shape"
required-features = ["graphics"]

[[example]]
name = "custom-sound-stream"
required-features = ["audio"]

[[example]]
name = "mouse"
required-features = ["graphics"]

[[example]]
name = "music-stream"
required-features = ["audio"]

[[example]]
name = "pong"
required-features = ["graphics", "audio"]

[[example]]
name = "sound-capture"
required-features = ["audio"]

[[example]]
name = "sound"
required-features = ["audio"]

[[example]]
name = "unicode-text-entry"
required-features = ["graphics"]

[[example]]
name = "vertex-arrays"
required-features = ["graphics"]

[[example]]
name = "shader"
required-features = ["graphics"]

[[example]]
name = "custom-sound-recorder"
required-features = ["audio"]

[workspace]
